components/istio/all-in-one-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: all-in-one-vs
  namespace: istio-ingress
spec:
  hosts:
  - ${domain}
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    route:
      - destination:
          host: grafana.grafana.svc.cluster.local
          port:
            number: 80
  - match:
    - uri:
        prefix: /kiali
    route:
      - destination:
          host: kiali.kiali.svc.cluster.local
          port:
            number: 20001
  - match:
    - uri:
        prefix: /podinfo
    rewrite:
      uri: /
    route:
      - destination:
          host: podinfo.podinfo.svc.cluster.local
          port:
            number: 9898

  - match:
    - uri:
        prefix: /prometheus
    route:
      - destination:
          host: prometheus-kube-prometheus-prometheus.prometheus.svc.cluster.local
          port:
            number: 9090
  - route:
    - destination:
        host: podinfo.podinfo.svc.cluster.local
        port:
          number: 9898
