components/istio/grafana-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: grafana
spec:
  hosts:
  - ${domain}
  gateways:
  - istio-ingress/main-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    route:
      - destination:
          host: grafana
          port:
            number: 80
