components/istio/kiali-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: kiali
spec:
  hosts:
  - ${domain}
  gateways:
  - istio-ingress/main-gateway
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
      - destination:
          host: kiali
          port:
            number: 20001
