components/istio/podinfo-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: podinfo-vs
  namespace: podinfo
spec:
  hosts:
  - ${domain}
  gateways:
  - istio-ingress/main-gateway
  http:
  - match:
    - uri:
        prefix: /podinfo
    rewrite:
      uri: /
    route:
      - destination:
          host: podinfo
          port:
            number: 9898
  - route:
    - destination:
        host: podinfo
        port:
          number: 9898
