components/istio/prometheus-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: prometheus
spec:
  hosts:
  - ${domain}
  gateways:
  - istio-ingress/main-gateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    route:
      - destination:
          host: prometheus-kube-prometheus-prometheus
          port:
            number: 9090
